<resources>
    <string name="app_name">简易相机</string>
    <string name="app_launcher_name">相机</string>
    <string name="camera_unavailable">相机不可用</string>
    <string name="camera_open_error">访问相机时发生错误</string>
    <string name="video_creating_error">创建视频文件时发生错误</string>
    <string name="video_mode_error">切换至视频模式时失败</string>
    <string name="save_error_internal_storage">发生错误，切换保存文件夹至内部存储</string>
    <string name="camera_switch_error">切换相机失败</string>
    <string name="click_to_resume_preview">点击图像来恢复预览</string>
    <string name="photo_not_saved">照片无法保存</string>
    <string name="setting_resolution_failed">设定合适的分辨率时失败</string>
    <string name="video_recording_failed">视频录制失败，尝试使用不同的分辨率</string>
    <string name="other">其他</string>
    <string name="faq_1_title">我应该设置成什么样的照片压缩率呢？</string>
    <string name="faq_1_text">这取决于您的目标。对于大多数人的普通用途来说，建议使用 75%-80%，此时图片依然具有相当好的质量，但文件尺寸相比于 100% 时有非常巨大的缩减。</string>
    <string name="save_photos">保存照片和视频至</string>
    <string name="show_preview">在拍摄后显示照片预览</string>
    <string name="shutter_sound">快门声音</string>
    <string name="back_camera">后置相机分辨率</string>
    <string name="front_camera">前置相机分辨率</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="focus_before_capture">拍摄前对焦</string>
    <string name="volume_buttons_as_shutter">使用音量按键作为快门</string>
    <string name="turn_flash_off_at_startup">在启动后关闭闪光灯</string>
    <string name="flip_front_camera_photos_horizontally">水平对调前置相机</string>
    <string name="keep_settings_visible">保持设定按钮可见</string>
    <string name="always_open_back_camera">在打开应用程序时一直使用后置相机</string>
    <string name="save_photo_metadata">保存照片 EXIF 元数据</string>
    <string name="photo_compression_quality">照片压缩质量</string>
    <string name="shutter">快门</string>
    <string name="app_title">简易相机 - 轻松拍摄照片 &amp; 视频</string>
    <string name="app_short_description">创建美妙回忆从未如此简单。提供一个不含广告的优雅界面。</string>
    <string name="app_long_description">
        这个易用的相机可用于轻松的拍摄照片和视频录制。您可以快速切换前置和后置相机、修改保存路径或者限定分辨率。您将再也不会错失生命中的关键时刻。它具有各种有用的设定让它变得更加个性化，符合您的需求。让我们列举其中的一些。

        闪光灯可以被设置为开或者关，或者当作手电筒使用，并不是太常见。您可以捏住屏幕来缩放或者切换水平调换来捕获精美的人像照片。

        您可以轻松的通过几下点击更改分辨率、质量或者比率，就像你对于现代的相机应用所期待的那样。这适用于照片和视频。

        在拍摄一张图片后您可以查看照片的缩略图，点击它您可以快速在您偏好的图库中打开。您会在照片拍摄时看到清晰的提示，确保文件已被保存。

        如果您想要通过点按您设备的硬件相机按钮来启动这个简单的相机，您可能需要按照 设定 -> 应用程序 -> 相机 -> 禁用 的方式禁用内建的相机应用。

        如果您偏好质量胜过速度，您可以启用一个选项相机的拍摄前总是对焦，来保证结果总是清晰的。

        您可以配置它使用音量按键当作快门，或者在启动时默认打开闪光灯。

        它具备多种其他设定比如快门声、闪光灯、照片元数据和照片质量等。输出文件的路径也可以自定义，于是您可以决定您想要文件保存的地方。它支持内部存储和 SD 卡。

        它遵循质感设计且默认应用黑暗模式，提供便于使用的极佳的用户体验。相对于其他应用，不包含互联网访问给予您更佳的隐私、保密性和稳定性。

        不包含广告及非必要的权限，而且完全开放源代码，并提供自定义颜色。

        <b>于此查看简易工具系列全套:</b>
        https://www.simplemobiletools.com

        <b>Facebook:</b>
        https://www.facebook.com/simplemobiletools

        <b>Reddit:</b>
        https://www.reddit.com/r/SimpleMobileTools
    </string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="save_as">保存</string>
    <string name="file_saved">文件保存成功</string>
    <string name="invalid_file_format">无效文件格式</string>
    <string name="out_of_memory_error">内存不足</string>
    <string name="an_error_occurred">啊哦，出错啦：%s</string>
    <string name="open_with">打开方式</string>
    <string name="edit_with">编辑方式</string>
    <string name="no_app_found">未找到可用应用</string>
    <string name="set_as">设置为</string>
    <string name="copy_to_clipboard">复制到剪贴板</string>
    <string name="copy_number_to_clipboard">复制号码到剪贴板</string>
    <string name="value_copied_to_clipboard">内容已复制到剪贴板</string>
    <string name="dial_number">拨号</string>
    <string name="unknown">未知</string>
    <string name="always">总是</string>
    <string name="never">从不</string>
    <string name="details">详细</string>
    <string name="notes">笔记</string>
    <string name="deleting_folder">正在删除目录 \'%s\'</string>
    <string name="none">无</string>
    <string name="label">标签</string>
    <string name="transparent">透明</string>
    <string name="transparent_color">透明颜色</string>
    <string name="select_a_different_color">选择一个不同的颜色</string>
    <string name="download">下载</string>
    <string name="notification">通知</string>
    <string name="email">电子邮件</string>
    <string name="previous">上一首</string>
    <string name="playpause">播放/暂停</string>
    <string name="next">下一首</string>
    <string name="number">号码</string>
    <string name="no_contacts_found">未发现联系人</string>
    <string name="request_the_required_permissions">请求必要的权限</string>
    <string name="no_access_to_contacts">该应用无法访问联系人</string>
    <string name="insert_text_here">在此输入文本</string>
    <string name="change_view_type">更改视图类型</string>
    <string name="grid">网格</string>
    <string name="list">列表</string>
    <string name="increase_column_count">显示更多项目</string>
    <string name="reduce_column_count">显示更少项目</string>
    <string name="change_cover_image">更换封面图片</string>
    <string name="select_photo">选择图片</string>
    <string name="manage_blocked_numbers">管理黑名单</string>
    <string name="not_blocking_anyone">您的黑名单为空</string>
    <string name="add_a_blocked_number">添加黑名单号码</string>
    <string name="block_number">加入黑名单</string>
    <string name="block_numbers">加入黑名单</string>
    <string name="blocked_numbers">黑名单</string>
    <string name="must_make_default_dialer">您必须将这应用程序设为默认的拨号程序来使用黑名单。</string>
    <string name="set_as_default">设为默认</string>
    <string name="block_confirmation">您确定要将 \"%s\" 添加到黑名单吗？</string>
    <string name="favorites">收藏</string>
    <string name="add_favorites">添加收藏</string>
    <string name="add_to_favorites">添加到收藏</string>
    <string name="remove_from_favorites">从收藏中移除</string>
    <string name="search">搜索</string>
    <string name="type_2_characters">请输入至少两个字符来开始搜索</string>
    <string name="filter">过滤</string>
    <string name="no_items_found">找不到任何项目。</string>
    <string name="change_filter">更改过滤器</string>
    <string name="no_storage_permissions">请授予存储权限</string>
    <string name="no_contacts_permission">请授予通讯录权限</string>
    <string name="no_camera_permissions">请授予相机权限</string>
    <string name="no_audio_permissions">请授予音频权限</string>
    <string name="rename_file">重命名文件</string>
    <string name="rename_folder">重命名文件夹</string>
    <string name="rename_file_error">无法重命名文件</string>
    <string name="rename_folder_error">无法重命名文件夹</string>
    <string name="rename_folder_empty">文件夹名不能为空</string>
    <string name="rename_folder_exists">文件夹名已存在</string>
    <string name="rename_folder_root">无法重命名存储器的根目录</string>
    <string name="rename_folder_ok">文件夹重命名成功</string>
    <string name="renaming_folder">重命名中…</string>
    <string name="filename_cannot_be_empty">文件名不能为空</string>
    <string name="filename_invalid_characters">文件名包含非法字符</string>
    <string name="filename_invalid_characters_placeholder">文件名 \'%s\' 包含无效的字符</string>
    <string name="extension_cannot_be_empty">扩展名不能为空</string>
    <string name="source_file_doesnt_exist">原文件 %s 不存在</string>
    <string name="prepend_filenames">文件名前缀</string>
    <string name="append_filenames">文件名后缀</string>
    <string name="simple_renaming">简单重命名</string>
    <string name="pattern_renaming">图案</string>
    <string name="string_to_add">要添加的字符串</string>
    <string name="rename_date_time_pattern">%Y - 年\n%M - 月\n%D - 日\n%h - 时\n%m - 分\n%s - 秒\n%i - 数字从1递增</string>
    <string name="copy">复制</string>
    <string name="move">移动</string>
    <string name="copy_move">复制／移动</string>
    <string name="copy_to">复制到</string>
    <string name="move_to">移动到</string>
    <string name="source">原始路径</string>
    <string name="destination">目标路径</string>
    <string name="select_destination">选择目标路径</string>
    <string name="click_select_destination">点击此处以设置目标路径</string>
    <string name="invalid_destination">无法写入到选中目标路径</string>
    <string name="please_select_destination">请选择目标路径</string>
    <string name="source_and_destination_same">原始路径和目标路径不能相同</string>
    <string name="copy_failed">无法复制文件</string>
    <string name="copying">正在复制…</string>
    <string name="copying_success">复制成功</string>
    <string name="copy_move_failed">操作失败</string>
    <string name="moving">正在移动…</string>
    <string name="moving_success">文件移动成功</string>
    <string name="moving_success_partial">无法移动相同文件</string>
    <string name="copying_success_partial">无法复制相同文件</string>
    <string name="no_files_selected">未选择文件</string>
    <string name="saving">正在保存…</string>
    <string name="could_not_create_folder">创建文件夹 %s 失败</string>
    <string name="could_not_create_file">创建文件 %s 失败</string>
    <string name="no_new_items">没有找到新的项目</string>
    <string name="no_space">目标位置没有足够的可用空间。\n需要 %1$s，可用 %2$s</string>
    <string name="create_new">新建</string>
    <string name="folder">文件夹</string>
    <string name="file">文件</string>
    <string name="create_new_folder">新建文件夹</string>
    <string name="name_taken">同名文件夹或文件已存在</string>
    <string name="invalid_name">名称包含非法字符</string>
    <string name="empty_name">请输入名称</string>
    <string name="unknown_error_occurred">未知错误</string>
    <string name="file_already_exists">文件 \"%s\" 已存在</string>
    <string name="file_already_exists_overwrite">文件 \"%s\" 已存在。是否覆盖？</string>
    <string name="folder_already_exists">文件夹 \"%s\" 已存在</string>
    <string name="merge">合并</string>
    <string name="keep_both">保留两者</string>
    <string name="overwrite">覆盖</string>
    <string name="skip">跳过</string>
    <string name="append">应用到 \'_1\'</string>
    <string name="apply_to_all">应用到全部冲突项</string>
    <string name="select_folder">选择文件夹</string>
    <string name="select_file">选择文件</string>
    <string name="confirm_storage_access_title">确认外部存储器访问权限</string>
    <string name="confirm_storage_access_text">请选择 SD 卡根目录并授予写权限</string>
    <string name="confirm_storage_access_text_sd">如果您未找到 SD 卡目录，请尝试</string>
    <string name="confirm_selection">确认选择</string>
    <plurals name="items">
        <item quantity="other">%d 个项目</item>
    </plurals>
    <plurals name="delete_items">
        <item quantity="other">%d 个项目</item>
    </plurals>
    <plurals name="deleting_items">
        <item quantity="other">正在删除 %d 个项目</item>
    </plurals>
    <plurals name="delete_contacts">
        <item quantity="one">%d 联系人</item>
        <item quantity="other">%d 联系人</item>
    </plurals>
    <string name="select_storage">选择存储器</string>
    <string name="internal">内部存储器</string>
    <string name="sd_card">SD 卡</string>
    <string name="root">根目录</string>
    <string name="wrong_root_selected">目录选择错误，请选择 SD 卡</string>
    <string name="sd_card_usb_same">SD 卡和 USB 设备路径不能相同</string>
    <string name="app_on_sd_card">您似乎已将应用程序安装在 SD 卡上，这使得应用的小部件不可用。您将无法在小部件列表里看到它们。
        这是一个系统限制，所以如果您想要使用这些小部件，您必须将应用移回内部存储器。</string>
    <string name="properties">属性</string>
    <string name="path">路径</string>
    <string name="items_selected">已选择项目</string>
    <string name="direct_children_count">子目录数</string>
    <string name="files_count">总文件数</string>
    <string name="resolution">分辨率</string>
    <string name="duration">时长</string>
    <string name="artist">艺术家</string>
    <string name="album">专辑</string>
    <string name="focal_length">焦距</string>
    <string name="exposure_time">曝光时间</string>
    <string name="iso_speed">ISO 速度</string>
    <string name="f_number">光圈</string>
    <string name="camera">相机</string>
    <string name="exif">EXIF</string>
    <string name="song_title">歌曲标题</string>
    <string name="gps_coordinates">GPS 坐标</string>
    <string name="altitude">海拔高度</string>
    <string name="background_color">背景色</string>
    <string name="text_color">文本颜色</string>
    <string name="primary_color">主体色</string>
    <string name="accent_color_white">白色主题的强调色</string>
    <string name="accent_color_black_and_white">黑 &amp; 白色主题的强调色</string>
    <string name="foreground_color">前景色</string>
    <string name="app_icon_color">应用图标颜色</string>
    <string name="saving_label">正在保存</string>
    <string name="startup">启动</string>
</resources>